# jsnac

./: .coverage  .gitignore  Dockerfile  README.md  device.yml  docker.sh  json2schema.py  pyproject.toml  questions.py  snac.py  test-schema.json  test.json  tox.ini  yaml2json.py
.github/workflows/: main.yml
data/: example-jsnac.json  example-jsnac.yml  example.json  example.schema.json  example.yml  regenerate_test_data.py  test-jsnac.json  test-jsnac.yml  test.schema.json
docs/source/: conf.py  examples.rst  index.rst  intro.rst  jsnac.core.rst  jsnac.rst  jsnac.utils.rst  modules.rst  types.rst
jsnac/: __init__.py
jsnac/core/: build.py  infer.py
jsnac/utils/: jsnac_cli.py
tests/: test_cli.py  test_infer.py  test_schema.py
